--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -14,14 +14,14 @@
         completions."
     </string>
     <string name="action_log_in">Login</string>
-    <string name="hint_password">Password</string>
+    <string name="hint_password1">Password - Minimum of 6 characters</string>
     <string name="logo">Logo</string>
     <string name="catch_phrase">The people we know, the places we go.</string>
     <string name="login_or">-or-</string>
     <string name="login_register">Not yet a user? Register here</string>
     <string name="forgot_password">Forgot Password</string>
 
-    <string name="hint_email">Email</string>
+    <string name="hint_email">Email Address</string>
     <string name="hint_name">Fullname</string>
     <string name="btn_login">LOGIN</string>
     <string name="btn_register">REGISTER</string>
@@ -30,4 +30,6 @@
     <string name="welcome">Welcome</string>
     <string name="btn_logout">LOGOUT</string>
     <string name="name">Fullname</string>
+    <string name="hint_password2">Confirm password</string>
+    <string name="hint_password0">Password</string>
 </resources>
