--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -33,5 +33,12 @@
     <string name="hint_password2">Confirm password</string>
     <string name="hint_password0">Password</string>
     <string name="vcode">Verification Code</string>
-    <string name="verify" >Verify</string>
+    <string name="verify">Verify</string>
+    <string name="resetCode">Reset Code</string>
+    <string name="reset">Reset</string>
+    <string name="new_password">New password</string>
+    <string name="confirm_password">Confirm password</string>
+    <string name="request">Request</string>
+    <string name="Confirm">Confirm</string>
+    <string name="already_reset">Already have a reset code?</string>
 </resources>
